  Suggested by Zell (#0001589).
- Fixed a bug reported by Joolz that would cause problems when deleting a remote
  included file from a server (#0001587).
- Fixed a few more remote include problems on Windows
- Fixed a remote include problem caused by an earlier fix that resulted in referencing
  free'd memory 
- Q comes after P. Thanks to Rocko for reminding us! (fixes /stats P bug ;p).
- Added 90% of RC2 release notes.
- Cosmetic doc updates (#0001596) reported by HERZ.
- Updated SSL error for underlying syscall error a bit (#0001615).
- Minor doc updates on SSL (mIRC now supports SSL a bit).
- Fixed yet another fun remote includes memory corruption crash bug due
  to curl strangeness (took me 2 hours to trace down, great!). Reported by Matridom.
- Redesigned the HOOKTYPE_PRE_LOCAL_JOIN to support return types of HOOK_DENY,
  HOOK_ALLOW, and HOOK_CONTINUE to prevent a user from joining, to immediately allow
  a user to join, and to proceed on to see if other modules will deny the user.
  Based on a suggestion by satmd (#0001604)
- Imported TRE 0.6.5 on Win32 and Linux, solves (#0001542) and (#0001564) reported 
  by methos
- Added rest of release notes.
- Added first 2 rules to spamfilter.conf, update release notes and unrealinst.iss
  for it too (also added missing badwords.quit.conf file @ win32).
- And some more spamfilter.conf rules (mirseed & fagot).
- Updated /credits with a few more donators (listed in no particular order)
- Fixed a little error in the spamfilter.conf
- And some more spamfilter.conf rules (aplore, gtbot, sdbot, spybot).
- Minor doc update.
- Changed version to RC2
*** RC2 release ***
- Fixed a bug regarding the new HOOKTYPE_PRE_LOCAL_JOIN reported by bla
- Fixed a compile problem on Solaris due to tar not supporting the z option
*** RC2fix release ***
- spamfilter.conf: fixed fyle sig (was bad!), some minor updates to the rest,
  added mirc 6.12 exploit sig. Reported by PHANTOm.