@@ -563,7 +563,7 @@ char targetbuf[64], actionbuf[2];
 	actionbuf[1] = '\0';
 	
 	/* now check the regex... */
-	p = unreal_checkregex(parv[6],0);
+	p = unreal_checkregex(parv[6],0,1);
 	if (p)
 	{
 		sendto_one(sptr, ":%s NOTICE %s :Error in regex '%s': %s",
